src/phase2/parser.output
Terminals unused in grammar

   GOT
   ETOK


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: DECLBLOCK EMPTYD CODEBLOCK EMPTYC

    2 EMPTYD: '{' DSTATEMENTS '}'
    3       | '{' '}'

    4 DSTATEMENTS: DSTATEMENT
    5            | DSTATEMENTS DSTATEMENT

    6 DSTATEMENT: INT MULTIDENTIFIERS ';'
    7           | ';'

    8 MULTIDENTIFIERS: IDENTIFIERS
    9                | MULTIDENTIFIERS ',' IDENTIFIERS

   10 EMPTYC: '{' CSTATEMENTS '}'
   11       | '{' '}'

   12 CSTATEMENTS: LABEL CSTATEMENTS
   13            | CSTATEMENT CSTATEMENTS
   14            | CSTATEMENT

   15 CSTATEMENT: ASSIGNMENT ';'
   16           | PRINTING ';'
   17           | FORLOOP
   18           | WHILELOOP
   19           | READING ';'
   20           | IFELSE
   21           | GOTOO ';'
   22           | ';'

   23 LABEL: IDENTIFIER ':'

   24 ASSIGNMENT: IDENTIFIERS '=' EXP

   25 PRINTING: PRINT EXPRESSION
   26         | PRINTLN EXPRESSION

   27 EXPRESSION: PRINTVALS
   28           | EXPRESSION ',' PRINTVALS

   29 PRINTVALS: EXP
   30          | STRING

   31 FORLOOP: FOR IDENTIFIERS '=' NUMBER ',' NUMBER EMPTYC
   32        | FOR IDENTIFIERS '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC

   33 WHILELOOP: WHILE BOOLEXP EMPTYC

   34 IFELSE: IF BOOLEXP EMPTYC ELSE EMPTYC
   35       | IF BOOLEXP EMPTYC

   36 GOTOO: GOTO IDENTIFIER IF BOOLEXP
   37      | GOTO IDENTIFIER

   38 READING: READ MULTIDENTIFIERS

   39 EXP: TERM
   40    | EXP PLUS EXP
   41    | EXP MINUS EXP
   42    | EXP MUL EXP
   43    | EXP DIV EXP

   44 BOOLEXP: EXP GT EXP
   45        | EXP LT EXP
   46        | EXP GE EXP
   47        | EXP LE EXP
   48        | EXP NEQ EXP
   49        | EXP EQEQ EXP

   50 TERM: IDENTIFIERS
   51     | NUMBER

   52 IDENTIFIERS: IDENTIFIER
   53            | IDENTIFIER '[' EXP ']'


Terminals, with rules where they appear

$end (0) 0
',' (44) 9 28 31 32
':' (58) 23
';' (59) 6 7 15 16 19 21 22
'=' (61) 24 31 32
'[' (91) 53
']' (93) 53
'{' (123) 2 3 10 11
'}' (125) 2 3 10 11
error (256)
IDENTIFIER (258) 23 36 37 52 53
STRING (259) 30
NUMBER (260) 31 32 51
PRINT (261) 25
PRINTLN (262) 26
READ (263) 38
FOR (264) 31 32
DECLBLOCK (265) 1
CODEBLOCK (266) 1
WHILE (267) 33
INT (268) 6
IF (269) 34 35 36
ELSE (270) 34
GOTO (271) 36 37
GOT (272)
PLUS (273) 40
MINUS (274) 41
MUL (275) 42
DIV (276) 43
ETOK (277)
LT (278) 45
GE (279) 46
LE (280) 47
GT (281) 44
EQEQ (282) 49
NEQ (283) 48


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
PROGRAM (38)
    on left: 1, on right: 0
EMPTYD (39)
    on left: 2 3, on right: 1
DSTATEMENTS (40)
    on left: 4 5, on right: 2 5
DSTATEMENT (41)
    on left: 6 7, on right: 4 5
MULTIDENTIFIERS (42)
    on left: 8 9, on right: 6 9 38
EMPTYC (43)
    on left: 10 11, on right: 1 31 32 33 34 35
CSTATEMENTS (44)
    on left: 12 13 14, on right: 10 12 13
CSTATEMENT (45)
    on left: 15 16 17 18 19 20 21 22, on right: 13 14
LABEL (46)
    on left: 23, on right: 12
ASSIGNMENT (47)
    on left: 24, on right: 15
PRINTING (48)
    on left: 25 26, on right: 16
EXPRESSION (49)
    on left: 27 28, on right: 25 26 28
PRINTVALS (50)
    on left: 29 30, on right: 27 28
FORLOOP (51)
    on left: 31 32, on right: 17
WHILELOOP (52)
    on left: 33, on right: 18
IFELSE (53)
    on left: 34 35, on right: 20
GOTOO (54)
    on left: 36 37, on right: 21
READING (55)
    on left: 38, on right: 19
EXP (56)
    on left: 39 40 41 42 43, on right: 24 29 40 41 42 43 44 45 46 47
    48 49 53
BOOLEXP (57)
    on left: 44 45 46 47 48 49, on right: 33 34 35 36
TERM (58)
    on left: 50 51, on right: 39
IDENTIFIERS (59)
    on left: 52 53, on right: 8 9 24 31 32 50


State 0

    0 $accept: . PROGRAM $end
    1 PROGRAM: . DECLBLOCK EMPTYD CODEBLOCK EMPTYC

    DECLBLOCK  shift, and go to state 1

    PROGRAM  go to state 2


State 1

    1 PROGRAM: DECLBLOCK . EMPTYD CODEBLOCK EMPTYC
    2 EMPTYD: . '{' DSTATEMENTS '}'
    3       | . '{' '}'

    '{'  shift, and go to state 3

    EMPTYD  go to state 4


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 5


State 3

    2 EMPTYD: '{' . DSTATEMENTS '}'
    3       | '{' . '}'
    4 DSTATEMENTS: . DSTATEMENT
    5            | . DSTATEMENTS DSTATEMENT
    6 DSTATEMENT: . INT MULTIDENTIFIERS ';'
    7           | . ';'

    INT  shift, and go to state 6
    '}'  shift, and go to state 7
    ';'  shift, and go to state 8

    DSTATEMENTS  go to state 9
    DSTATEMENT   go to state 10


State 4

    1 PROGRAM: DECLBLOCK EMPTYD . CODEBLOCK EMPTYC

    CODEBLOCK  shift, and go to state 11


State 5

    0 $accept: PROGRAM $end .

    $default  accept


State 6

    6 DSTATEMENT: INT . MULTIDENTIFIERS ';'
    8 MULTIDENTIFIERS: . IDENTIFIERS
    9                | . MULTIDENTIFIERS ',' IDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12

    MULTIDENTIFIERS  go to state 13
    IDENTIFIERS      go to state 14


State 7

    3 EMPTYD: '{' '}' .

    $default  reduce using rule 3 (EMPTYD)


State 8

    7 DSTATEMENT: ';' .

    $default  reduce using rule 7 (DSTATEMENT)


State 9

    2 EMPTYD: '{' DSTATEMENTS . '}'
    5 DSTATEMENTS: DSTATEMENTS . DSTATEMENT
    6 DSTATEMENT: . INT MULTIDENTIFIERS ';'
    7           | . ';'

    INT  shift, and go to state 6
    '}'  shift, and go to state 15
    ';'  shift, and go to state 8

    DSTATEMENT  go to state 16


State 10

    4 DSTATEMENTS: DSTATEMENT .

    $default  reduce using rule 4 (DSTATEMENTS)


State 11

    1 PROGRAM: DECLBLOCK EMPTYD CODEBLOCK . EMPTYC
   10 EMPTYC: . '{' CSTATEMENTS '}'
   11       | . '{' '}'

    '{'  shift, and go to state 17

    EMPTYC  go to state 18


State 12

   52 IDENTIFIERS: IDENTIFIER .  [PLUS, MINUS, MUL, DIV, LT, GE, LE, GT, EQEQ, NEQ, '{', ';', ',', '=', ']']
   53            | IDENTIFIER . '[' EXP ']'

    '['  shift, and go to state 19

    $default  reduce using rule 52 (IDENTIFIERS)


State 13

    6 DSTATEMENT: INT MULTIDENTIFIERS . ';'
    9 MULTIDENTIFIERS: MULTIDENTIFIERS . ',' IDENTIFIERS

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


State 14

    8 MULTIDENTIFIERS: IDENTIFIERS .

    $default  reduce using rule 8 (MULTIDENTIFIERS)


State 15

    2 EMPTYD: '{' DSTATEMENTS '}' .

    $default  reduce using rule 2 (EMPTYD)


State 16

    5 DSTATEMENTS: DSTATEMENTS DSTATEMENT .

    $default  reduce using rule 5 (DSTATEMENTS)


State 17

   10 EMPTYC: '{' . CSTATEMENTS '}'
   11       | '{' . '}'
   12 CSTATEMENTS: . LABEL CSTATEMENTS
   13            | . CSTATEMENT CSTATEMENTS
   14            | . CSTATEMENT
   15 CSTATEMENT: . ASSIGNMENT ';'
   16           | . PRINTING ';'
   17           | . FORLOOP
   18           | . WHILELOOP
   19           | . READING ';'
   20           | . IFELSE
   21           | . GOTOO ';'
   22           | . ';'
   23 LABEL: . IDENTIFIER ':'
   24 ASSIGNMENT: . IDENTIFIERS '=' EXP
   25 PRINTING: . PRINT EXPRESSION
   26         | . PRINTLN EXPRESSION
   31 FORLOOP: . FOR IDENTIFIERS '=' NUMBER ',' NUMBER EMPTYC
   32        | . FOR IDENTIFIERS '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC
   33 WHILELOOP: . WHILE BOOLEXP EMPTYC
   34 IFELSE: . IF BOOLEXP EMPTYC ELSE EMPTYC
   35       | . IF BOOLEXP EMPTYC
   36 GOTOO: . GOTO IDENTIFIER IF BOOLEXP
   37      | . GOTO IDENTIFIER
   38 READING: . READ MULTIDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 22
    PRINT       shift, and go to state 23
    PRINTLN     shift, and go to state 24
    READ        shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    GOTO        shift, and go to state 29
    '}'         shift, and go to state 30
    ';'         shift, and go to state 31

    CSTATEMENTS  go to state 32
    CSTATEMENT   go to state 33
    LABEL        go to state 34
    ASSIGNMENT   go to state 35
    PRINTING     go to state 36
    FORLOOP      go to state 37
    WHILELOOP    go to state 38
    IFELSE       go to state 39
    GOTOO        go to state 40
    READING      go to state 41
    IDENTIFIERS  go to state 42


State 18

    1 PROGRAM: DECLBLOCK EMPTYD CODEBLOCK EMPTYC .

    $default  reduce using rule 1 (PROGRAM)


State 19

   39 EXP: . TERM
   40    | . EXP PLUS EXP
   41    | . EXP MINUS EXP
   42    | . EXP MUL EXP
   43    | . EXP DIV EXP
   50 TERM: . IDENTIFIERS
   51     | . NUMBER
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'
   53            | IDENTIFIER '[' . EXP ']'

    IDENTIFIER  shift, and go to state 12
    NUMBER      shift, and go to state 43

    EXP          go to state 44
    TERM         go to state 45
    IDENTIFIERS  go to state 46


State 20

    6 DSTATEMENT: INT MULTIDENTIFIERS ';' .

    $default  reduce using rule 6 (DSTATEMENT)


State 21

    9 MULTIDENTIFIERS: MULTIDENTIFIERS ',' . IDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12

    IDENTIFIERS  go to state 47


State 22

   23 LABEL: IDENTIFIER . ':'
   52 IDENTIFIERS: IDENTIFIER .  ['=']
   53            | IDENTIFIER . '[' EXP ']'

    ':'  shift, and go to state 48
    '['  shift, and go to state 19

    $default  reduce using rule 52 (IDENTIFIERS)


State 23

   25 PRINTING: PRINT . EXPRESSION
   27 EXPRESSION: . PRINTVALS
   28           | . EXPRESSION ',' PRINTVALS
   29 PRINTVALS: . EXP
   30          | . STRING
   39 EXP: . TERM
   40    | . EXP PLUS EXP
   41    | . EXP MINUS EXP
   42    | . EXP MUL EXP
   43    | . EXP DIV EXP
   50 TERM: . IDENTIFIERS
   51     | . NUMBER
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12
    STRING      shift, and go to state 49
    NUMBER      shift, and go to state 43

    EXPRESSION   go to state 50
    PRINTVALS    go to state 51
    EXP          go to state 52
    TERM         go to state 45
    IDENTIFIERS  go to state 46


State 24

   26 PRINTING: PRINTLN . EXPRESSION
   27 EXPRESSION: . PRINTVALS
   28           | . EXPRESSION ',' PRINTVALS
   29 PRINTVALS: . EXP
   30          | . STRING
   39 EXP: . TERM
   40    | . EXP PLUS EXP
   41    | . EXP MINUS EXP
   42    | . EXP MUL EXP
   43    | . EXP DIV EXP
   50 TERM: . IDENTIFIERS
   51     | . NUMBER
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12
    STRING      shift, and go to state 49
    NUMBER      shift, and go to state 43

    EXPRESSION   go to state 53
    PRINTVALS    go to state 51
    EXP          go to state 52
    TERM         go to state 45
    IDENTIFIERS  go to state 46


State 25

    8 MULTIDENTIFIERS: . IDENTIFIERS
    9                | . MULTIDENTIFIERS ',' IDENTIFIERS
   38 READING: READ . MULTIDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12

    MULTIDENTIFIERS  go to state 54
    IDENTIFIERS      go to state 14


State 26

   31 FORLOOP: FOR . IDENTIFIERS '=' NUMBER ',' NUMBER EMPTYC
   32        | FOR . IDENTIFIERS '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12

    IDENTIFIERS  go to state 55


State 27

   33 WHILELOOP: WHILE . BOOLEXP EMPTYC
   39 EXP: . TERM
   40    | . EXP PLUS EXP
   41    | . EXP MINUS EXP
   42    | . EXP MUL EXP
   43    | . EXP DIV EXP
   44 BOOLEXP: . EXP GT EXP
   45        | . EXP LT EXP
   46        | . EXP GE EXP
   47        | . EXP LE EXP
   48        | . EXP NEQ EXP
   49        | . EXP EQEQ EXP
   50 TERM: . IDENTIFIERS
   51     | . NUMBER
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12
    NUMBER      shift, and go to state 43

    EXP          go to state 56
    BOOLEXP      go to state 57
    TERM         go to state 45
    IDENTIFIERS  go to state 46


State 28

   34 IFELSE: IF . BOOLEXP EMPTYC ELSE EMPTYC
   35       | IF . BOOLEXP EMPTYC
   39 EXP: . TERM
   40    | . EXP PLUS EXP
   41    | . EXP MINUS EXP
   42    | . EXP MUL EXP
   43    | . EXP DIV EXP
   44 BOOLEXP: . EXP GT EXP
   45        | . EXP LT EXP
   46        | . EXP GE EXP
   47        | . EXP LE EXP
   48        | . EXP NEQ EXP
   49        | . EXP EQEQ EXP
   50 TERM: . IDENTIFIERS
   51     | . NUMBER
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 12
    NUMBER      shift, and go to state 43

    EXP          go to state 56
    BOOLEXP      go to state 58
    TERM         go to state 45
    IDENTIFIERS  go to state 46


State 29

   36 GOTOO: GOTO . IDENTIFIER IF BOOLEXP
   37      | GOTO . IDENTIFIER

    IDENTIFIER  shift, and go to state 59


State 30

   11 EMPTYC: '{' '}' .

    $default  reduce using rule 11 (EMPTYC)


State 31

   22 CSTATEMENT: ';' .

    $default  reduce using rule 22 (CSTATEMENT)


State 32

   10 EMPTYC: '{' CSTATEMENTS . '}'

    '}'  shift, and go to state 60


State 33

   12 CSTATEMENTS: . LABEL CSTATEMENTS
   13            | . CSTATEMENT CSTATEMENTS
   13            | CSTATEMENT . CSTATEMENTS
   14            | . CSTATEMENT
   14            | CSTATEMENT .  ['}']
   15 CSTATEMENT: . ASSIGNMENT ';'
   16           | . PRINTING ';'
   17           | . FORLOOP
   18           | . WHILELOOP
   19           | . READING ';'
   20           | . IFELSE
   21           | . GOTOO ';'
   22           | . ';'
   23 LABEL: . IDENTIFIER ':'
   24 ASSIGNMENT: . IDENTIFIERS '=' EXP
   25 PRINTING: . PRINT EXPRESSION
   26         | . PRINTLN EXPRESSION
   31 FORLOOP: . FOR IDENTIFIERS '=' NUMBER ',' NUMBER EMPTYC
   32        | . FOR IDENTIFIERS '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC
   33 WHILELOOP: . WHILE BOOLEXP EMPTYC
   34 IFELSE: . IF BOOLEXP EMPTYC ELSE EMPTYC
   35       | . IF BOOLEXP EMPTYC
   36 GOTOO: . GOTO IDENTIFIER IF BOOLEXP
   37      | . GOTO IDENTIFIER
   38 READING: . READ MULTIDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 22
    PRINT       shift, and go to state 23
    PRINTLN     shift, and go to state 24
    READ        shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    GOTO        shift, and go to state 29
    ';'         shift, and go to state 31

    $default  reduce using rule 14 (CSTATEMENTS)

    CSTATEMENTS  go to state 61
    CSTATEMENT   go to state 33
    LABEL        go to state 34
    ASSIGNMENT   go to state 35
    PRINTING     go to state 36
    FORLOOP      go to state 37
    WHILELOOP    go to state 38
    IFELSE       go to state 39
    GOTOO        go to state 40
    READING      go to state 41
    IDENTIFIERS  go to state 42


State 34

   12 CSTATEMENTS: . LABEL CSTATEMENTS
   12            | LABEL . CSTATEMENTS
   13            | . CSTATEMENT CSTATEMENTS
   14            | . CSTATEMENT
   15 CSTATEMENT: . ASSIGNMENT ';'
   16           | . PRINTING ';'
   17           | . FORLOOP
   18           | . WHILELOOP
   19           | . READING ';'
   20           | . IFELSE
   21           | . GOTOO ';'
   22           | . ';'
   23 LABEL: . IDENTIFIER ':'
   24 ASSIGNMENT: . IDENTIFIERS '=' EXP
   25 PRINTING: . PRINT EXPRESSION
   26         | . PRINTLN EXPRESSION
   31 FORLOOP: . FOR IDENTIFIERS '=' NUMBER ',' NUMBER EMPTYC
   32        | . FOR IDENTIFIERS '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC
   33 WHILELOOP: . WHILE BOOLEXP EMPTYC
   34 IFELSE: . IF BOOLEXP EMPTYC ELSE EMPTYC
   35       | . IF BOOLEXP EMPTYC
   36 GOTOO: . GOTO IDENTIFIER IF BOOLEXP
   37      | . GOTO IDENTIFIER
   38 READING: . READ MULTIDENTIFIERS
   52 IDENTIFIERS: . IDENTIFIER
   53            | . IDENTIFIER '[' EXP ']'

    IDENTIFIER  shift, and go to state 22
    PRINT       shift, and go to state 23
    PRINTLN     shift, and go to state 24
    READ        shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    GOTO        shift, and go to state 29
    ';'         shift, and go to state 31

    CSTATEMENTS  go to state 62
    CSTATEMENT   go to state 33
    LABEL        go to state 34
    ASSIGNMENT   go to state 35
    PRINTING     go to state 36
    FORLOOP      go to state 37
    WHILELOOP    go to state 38
    IFELSE       go to state 39
    GOTOO        go to state 40
    READING      go to state 41
    IDENTIFIERS  go to state 42


State 35

   15 CSTATEMENT: ASSIGNMENT . ';'

    ';'  shift, and go to state 63


State 36

   16 CSTATEMENT: PRINTING . ';'

    ';'  shift, and go to state 64


State 37

   17 CSTATEMENT: FORLOOP .

    $default  reduce using rule 17 (CSTATEMENT)


State 38

   18 CSTATEMENT: WHILELOOP .

    $default  reduce using rule 18 (CSTATEMENT)


State 39

   20 CSTATEMENT: IFELSE .

    $default  reduce using rule 20 (CSTATEMENT)


State 40

   21 CSTATEMENT: GOTOO . ';'

    ';'  shift, and go to state 65


State 41

   19 CSTATEMENT: READING . ';'

    ';'  shift, and go to state 66


State 42

   24 ASSIGNMENT: IDENTIFIERS . '=' EXP

    '='  shift, and go to state 67


State 43

   51 TERM: NUMBER .

    $default  reduce using rule 51 (TERM)


State 44

   40 EXP: EXP . PLUS EXP
   41    | EXP . MINUS EXP
   42    | EXP . MUL EXP
   43    | EXP . DIV EXP
   53 IDENTIFIERS: IDENTIFIER '[' EXP . ']'

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    MUL    shift, and go to state 70
    DIV    shift, and go to state 71
    ']'    shift, and go to state 72


State 45

   39 EXP: TERM .

    $default  reduce using rule 39 (EXP)


State 46

   50 TERM: IDENTIFIERS .

    $default  reduce using rule 50 (TERM)


State 47

    9 MULTIDENTIFIERS: MULTIDENTIFIERS ',' IDENTIFIERS .

    $default  reduce using rule 9 (MULTIDENTIFIERS)


State 48

   23 LABEL: IDENTIFIER ':' .

    $default  reduce using rule 23 (LABEL)


State 49

   30 PRINTVALS: STRING .

    $default  reduce using rule 30 (PRINTVALS)


State 50

   25 PRINTING: PRINT EXPRESSION .  [';']
   28 EXPRESSION: EXPRESSION . ',' PRINTVALS

    ','  shift, and go to state 73

    $default  reduce using rule 25 (PRINTING)


State 51

   27 EXPRESSION: PRINTVALS .

    $default  reduce using rule 27 (EXPRESSION)


State 52

   29 PRINTVALS: EXP .  [';', ',']
   40 EXP: EXP . PLUS EXP
   41    | EXP . MINUS EXP
   42    | EXP . MUL EXP
   43    | EXP . DIV EXP

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    MUL    shift, and go to state 70
    DIV    shift, and go to state 71

    $default  reduce using rule 29 (PRINTVALS)


State 53

   26 PRINTING: PRINTLN EXPRESSION .  [';']
   28 EXPRESSION: EXPRESSION . ',' PRINTVALS

    ','  shift, and go to state 73

    $default  reduce using rule 26 (PRINTING)


State 54

    9 MULTIDENTIFIERS: MULTIDENTIFIERS . ',' IDENTIFIERS
   38 READING: READ MULTIDENTIFIERS .  [';']

    ','  shift, and go to state 21

    $default  reduce using rule 38 (READING)


State 55

   31 FORLOOP: FOR IDENTIFIERS . '=' NUMBER ',' NUMBER EMPTYC
   32        | FOR IDENTIFIERS . '=' NUMBER ',' NUMBER ',' NUMBER EMPTYC

    '='  shift, and go to state 74


State 56

   40 EXP: EXP . PLUS EXP
   41    | EXP . MINUS EXP
   42    | EXP . MUL EXP
   43    | EXP . DIV EXP
   44 BOOLEXP: EXP . GT EXP
   45        | EXP . LT EXP
   46        | EXP . GE EXP
   47        | EXP . LE EXP
   48        | EXP . NEQ EXP
   49        | EXP . EQEQ EXP

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    MUL    shift, and go to state 70
    DIV    shift, and go to state 71
    LT     shift, and go to state 75
    GE     shift, and go to state 76
    LE     shift, and go to state 77
    GT     shift, and go to state 78
    EQEQ   shift, and go to state 79
    NEQ    shift, and go to state 80


State 57

   10 EMPTYC: . '{' CSTATEMENTS '}'
   11       | . '{' '}'
   33 WHILELOOP: WHILE BOOLEXP . EMPTYC

    '{'  shift, and go to state 17

    EMPTYC  go to state 81


State 58

   10 EMPTYC: . '{' CSTATEMENTS '}'
   11       | . '{' '}'
   34 IFELSE: IF BOOLEXP . EMPTYC ELSE EMPTYC
   35       | IF BOOLEXP . EMPTYC

    '{'  shift, and go to state 17

    EMPTYC  go to state 82


State 59

   36 GOTOO: GOTO IDENTIFIER . IF BOOLEXP
   37      | GOTO IDENTIFIER .  [';']

    IF  shift, and go to state 83

    $default  reduce using rule 37 (GOTOO)


State 60

   10 EMPTYC: '{' CSTATEMENTS '}' .

    $default  reduce using rule 10 (EMPTYC)


State 61
